--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -245,7 +245,8 @@
 <!ENTITY Ctr_alttabstb2		"V maximalizovaném okně (tabs on top)">
 
 <!ENTITY Ctr_altmenubar		"Přidat barvu pozadí (lišta záhlaví OS)">
-<!ENTITY Ctr_altmenubarpos	"Alternativní umístění (pod lištou záhlaví &brandShortName;)">
+<!ENTITY Ctr_altmenubarpos	"Alternativní umístění">
+<!ENTITY Ctr_altmenubarpos2	"Pod lištou záhlaví &brandShortName;">
 <!ENTITY Ctr_menubarnofog	"Odstranit barevné/zamlžené pozadí (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Barvy 'Blue Aero' pro hlavní lištu a panely">
