--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -245,7 +245,8 @@
 <!ENTITY Ctr_alttabstb2		"I maksimeret tilstand (faneblade øverst)">
 
 <!ENTITY Ctr_altmenubar		"Tilføj baggrundsfarve (OS titellinje)">
-<!ENTITY Ctr_altmenubarpos	"Alternativ placering (under &brandShortName; titellinje)">
+<!ENTITY Ctr_altmenubarpos	"Alternativ placering">
+<!ENTITY Ctr_altmenubarpos2	"Under &brandShortName; titellinje">
 <!ENTITY Ctr_menubarnofog	"Fjern baggrundsfarve/tåge (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Blå Aero-farver til værktøjslinjer (og faneblade)">
