--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -245,7 +245,8 @@
 <!ENTITY Ctr_alttabstb2		"Im maximierten Fenster (Tabs oben)">
 
 <!ENTITY Ctr_altmenubar		"Hintergrundfarbe hinzufügen ('System Titelleiste')">
-<!ENTITY Ctr_altmenubarpos	"alternative Position (unter der &brandShortName; Titelleiste)">
+<!ENTITY Ctr_altmenubarpos	"alternative Position">
+<!ENTITY Ctr_altmenubarpos2	"Unter der &brandShortName; Titelleiste">
 <!ENTITY Ctr_menubarnofog	"Hintergrundfarbe/-nebel entfernen (Windows AeroGlass / Win8)">
 
 <!ENTITY Ctr_aerocolors		"Blaue 'Aero' Farben für Leisten (und Tabs)">
