--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -245,7 +245,8 @@
 <!ENTITY Ctr_alttabstb2		"Σε λειτουργία μεγιστοποίησης (καρτέλες στο πάνω μέρος)">
 
 <!ENTITY Ctr_altmenubar		"Προσθήκη χρώματος φόντου (γραμμή τίτλου Λ.Σ.)">
-<!ENTITY Ctr_altmenubarpos	"Εναλλακτική θέση (παρακάτω από τη γραμμή τίτλου του &brandShortName;)">
+<!ENTITY Ctr_altmenubarpos	"Εναλλακτική θέση">
+<!ENTITY Ctr_altmenubarpos2	"Παρακάτω από τη γραμμή τίτλου του &brandShortName;">
 <!ENTITY Ctr_menubarnofog	"Απομάκρυνση χρώματος/ομίχλης φόντου (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Μπλε χρώματα «Aero» για εργαλειοθήκες (και καρτέλες)">
