--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -143,7 +143,7 @@
 <!ENTITY Ctr_cpanelmenus	"Menús tipo panel (botones de Historial, triple barra, etc.): Vista compacta">
 <!ENTITY Ctr_hidezoomres	"Controles de zoom en la barra de herramientas: Ocultar botón de restablecimiento del zoom">
 <!ENTITY Ctr_alt_newtabp	"Página de nueva pestaña (about:newtab): Apariencia alternativa">
-<!ENTITY Ctr_ctroldsearch	"Old search (experimental)">
+<!ENTITY Ctr_ctroldsearch	"Búsqueda antigua (experimental)">
 <!ENTITY Ctr_addonmanager	"Administrador de complementos">
 <!ENTITY Ctr_alt_addonsp	"Página 'más información' de los complementos: Apariencia alternativa">
 <!ENTITY Ctr_alt_addonsm	"Apariencia alternativa">
@@ -245,7 +245,8 @@
 <!ENTITY Ctr_alttabstb2		"En modo maximizado (pestañas arriba)">
 
 <!ENTITY Ctr_altmenubar		"Añadir color de fondo (barra de título del SO)">
-<!ENTITY Ctr_altmenubarpos	"Posición alternativa (bajo la barra de título de &brandShortName;)">
+<!ENTITY Ctr_altmenubarpos	"Posición alternativa">
+<!ENTITY Ctr_altmenubarpos2	"Bajo la barra de título de &brandShortName;">
 <!ENTITY Ctr_menubarnofog	"Eliminar color de fondo/niebla (Windows Aeroglass/8)">
 
 <!ENTITY Ctr_aerocolors		"Colores azul aero (celeste) para las barras de herramientas principales y pestañas">
