--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -245,7 +245,8 @@
 <!ENTITY Ctr_alttabstb2		"Maksimeeritud režiimis (kaardid peal)">
 
 <!ENTITY Ctr_altmenubar		"Lisa taustavärv (OS tiitliriba)">
-<!ENTITY Ctr_altmenubarpos	"Alternatiivne asukoht (&brandShortName;i tiitliriba all)">
+<!ENTITY Ctr_altmenubarpos	"Alternatiivne asukoht">
+<!ENTITY Ctr_altmenubarpos2	"&brandShortName;i tiitliriba all">
 <!ENTITY Ctr_menubarnofog	"Eemalda taustavärv/-udu (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Sinised Aero värvid tööriistaribadel (ja kaartidel)">
