--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -245,7 +245,8 @@
 <!ENTITY Ctr_alttabstb2		"En mode maximisé (onglets en haut)">
 
 <!ENTITY Ctr_altmenubar		"Ajouter un arrière-plan (barre de titre de l'OS visible)">
-<!ENTITY Ctr_altmenubarpos	"Position alternative (sous la barre de titre &brandShortName;)">
+<!ENTITY Ctr_altmenubarpos	"Position alternative">
+<!ENTITY Ctr_altmenubarpos2	"Sous la barre de titre &brandShortName;">
 <!ENTITY Ctr_menubarnofog	"Enlever l'effet de flou/l'arrière-plan des éléments (Windows AeroGlass / Win8)">
 
 <!ENTITY Ctr_aerocolors		"Couleur Bleue Aero pour les barres d'outils principales et les onglets">
