--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -245,7 +245,8 @@
 <!ENTITY Ctr_alttabstb2		"Nella finestra ingrandita (schede in alto)">
 
 <!ENTITY Ctr_altmenubar		"Aggiungi colore di sfondo (Barra del titolo di sistema)">
-<!ENTITY Ctr_altmenubarpos	"Posizione alternativa (sotto la barra del titolo)">
+<!ENTITY Ctr_altmenubarpos	"Posizione alternativa">
+<!ENTITY Ctr_altmenubarpos2	"Sotto la barra del titolo (&brandShortName;)">
 <!ENTITY Ctr_menubarnofog	"Elimina l’effetto nebbia o il colore di sfondo (Windows AeroGlass e Windows 8)">
 
 <!ENTITY Ctr_aerocolors		"Colori Blue Aero per le barre degli strumenti e le schede principali">
