--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -245,7 +245,8 @@
 <!ENTITY Ctr_alttabstb2		"No Modo Maximizado (Abas No Topo)">
 
 <!ENTITY Ctr_altmenubar		"Adicionar Cor do Fundo (Barra de Título do Sistema Operacional)">
-<!ENTITY Ctr_altmenubarpos	"Posição Alternativa (Abaixo da Barra de Título)">
+<!ENTITY Ctr_altmenubarpos	"Posição Alternativa">
+<!ENTITY Ctr_altmenubarpos2	"Abaixo da Barra de Título (&brandShortName;)">
 <!ENTITY Ctr_menubarnofog	"Remover a Cor/Névoa do Fundo (Windows AeroGlass/Win8)">
 
 <!ENTITY Ctr_aerocolors		"Cores Azul Aero para Barras de Ferramentas Principais e Abas">
