--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -245,7 +245,8 @@
 <!ENTITY Ctr_alttabstb2		"V razpetem načinu (zavihki na vrhu)">
 
 <!ENTITY Ctr_altmenubar		"Dodaj barvo ozadja (nazivna vrstica OS-a)">
-<!ENTITY Ctr_altmenubarpos	"Nadomestni položaj (pod nazivno vrstico &brandShortName;a)">
+<!ENTITY Ctr_altmenubarpos	"Nadomestni položaj">
+<!ENTITY Ctr_altmenubarpos2	"Pod nazivno vrstico &brandShortName;a">
 <!ENTITY Ctr_menubarnofog	"Odstrani barvo ozadja/meglo (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Modre barve Aero za orodne vrstice (in zavihke)">
