--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -245,7 +245,8 @@
 <!ENTITY Ctr_alttabstb2		"У розширеному режимі (вкладки нагорі)">
 
 <!ENTITY Ctr_altmenubar		"Додати колір тла (рядок заголовку Windows)">
-<!ENTITY Ctr_altmenubarpos	"Альтернативна позиція (нижче рядку заголовку &brandShortName;)">
+<!ENTITY Ctr_altmenubarpos	"Альтернативна позиція">
+<!ENTITY Ctr_altmenubarpos2	"Нижче рядку заголовку &brandShortName;">
 <!ENTITY Ctr_menubarnofog	"Прибрати затуманення/колір тла (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Кольори Blue Aero для основних панелей і вкладок">
