--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -245,7 +245,8 @@
 <!ENTITY Ctr_alttabstb2		"在最大化模式 (标签在顶部)">
 
 <!ENTITY Ctr_altmenubar		"添加背景颜色 (操作系统标题栏)">
-<!ENTITY Ctr_altmenubarpos	"备选位置 (在 &brandShortName; 标题栏下方)">
+<!ENTITY Ctr_altmenubarpos	"备选位置">
+<!ENTITY Ctr_altmenubarpos2	"在 &brandShortName; 标题栏下方">
 <!ENTITY Ctr_menubarnofog	"移除背景颜色/模糊 (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"主工具栏和标签页使用蓝色 Aero 颜色">
