--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -245,7 +245,8 @@
 <!ENTITY Ctr_alttabstb2		"在視窗最大化模式下 (分頁列置頂)">
 
 <!ENTITY Ctr_altmenubar		"加上背景色彩 (OS 標題列)">
-<!ENTITY Ctr_altmenubarpos	"換個位置 (標題列下方)">
+<!ENTITY Ctr_altmenubarpos	"換個位置">
+<!ENTITY Ctr_altmenubarpos2	"標題列下方">
 <!ENTITY Ctr_menubarnofog	"移除背景色彩/模糊 (Windows AeroGlass / Win8)">
 
 <!ENTITY Ctr_aerocolors		"將主工具列和分頁著上天藍色(Aero Blue)">
