--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -126,8 +126,8 @@
 <!ENTITY Ctr_stoprel1		"Tähtis: paiguta uuestilaadimise nupp peatamise nupu järele!">
 <!ENTITY Ctr_panelmenucol	"Paneelimenüüd: alternatiivne taustavärv">
 <!ENTITY Ctr_hideprivmask	"Privaatne veebilehitsemine: peida maski kujutis">
-<!ENTITY Ctr_navsmallicons	"Small icons">
-<!ENTITY Ctr_navlargeicons	"Large icons">
+<!ENTITY Ctr_navsmallicons	"Väiksed ikoonid">
+<!ENTITY Ctr_navlargeicons	"Suured ikoonid">
 <!ENTITY Ctr_nbisizedelay	"ms - täitmise viivitus brauseri käivitumisel (1000 ms = 1 sekund)">
 <!ENTITY Ctr_findbar		"Otsinguriba asukoht">
 <!ENTITY Ctr_findbar_def	"All (vaikimisi)">
@@ -265,7 +265,7 @@
 <!ENTITY Ctr_nonavtbborder	"Ülemised tööriistaribad: eemalda tööriistariba piirjooned">
 <!ENTITY Ctr_hidesbclose	"Külgribad: peida külgriba sulgemise nupp">
 <!ENTITY Ctr_notextshadow	"Tööriistaribad: peida tööriistariba teksti ja kaardi teksti vari">
-<!ENTITY Ctr_chevronfix		"Aadressiriba: peida topeltnool ('Veel tööriistu') tööriistariba lõpus">
+<!ENTITY Ctr_chevronfix		"Aadressiriba: peida topeltnool ('Rohkem tööriistu') tööriistariba lõpus">
 <!ENTITY Ctr_tbsep_winc		"Ülemised tööriistaribad: lisa-tööriistariba eraldajad">
 
 <!ENTITY Ctr_closeabarbut	"Lisade riba: peida sulgemise nupp">
