--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -126,8 +126,8 @@
 <!ENTITY Ctr_stoprel1		"Wažny: Tłocašk Znowego za tłocaškom Stoj placěrowaś!">
 <!ENTITY Ctr_panelmenucol	"Pólowe menije: alternatiwna slězynowa barwa">
 <!ENTITY Ctr_hideprivmask	"Priwatny modus: maskowy pokazowaŕ schowaś">
-<!ENTITY Ctr_navsmallicons	"Small icons">
-<!ENTITY Ctr_navlargeicons	"Large icons">
+<!ENTITY Ctr_navsmallicons	"Małe symbole">
+<!ENTITY Ctr_navlargeicons	"Wjelike symbole">
 <!ENTITY Ctr_nbisizedelay	"Wuwjeźeńske wokomuźenje ms (1000 ms = 1 sekunda)">
 <!ENTITY Ctr_findbar		"Pytańska rědka">
 <!ENTITY Ctr_findbar_def	"Standardna pozicija">
@@ -148,8 +148,8 @@
 <!ENTITY Ctr_alt_addonsp	"'Bok Dalšne info': alternatiwny pórěd">
 <!ENTITY Ctr_alt_addonsm	"Alternatiwny naglěd">
 <!ENTITY Ctr_am_nowarning	"Lisćiny dodankow: Warnowanja schowaś">
-<!ENTITY Ctr_am_compact		"Add-on lists: compact view">
-<!ENTITY Ctr_am_compact2	"Compact view +">
+<!ENTITY Ctr_am_compact		"Lisćiny dodankow: kompaktny naglěd">
+<!ENTITY Ctr_am_compact2	"Kompaktny naglěd +">
 <!ENTITY Ctr_addonversion	"Lisćiny dodankow: wersiju dodanka pokazaś">
 <!ENTITY Ctr_xpinstallui	"Stare dodankowe instalěrowańske wokno (nastajenje about:config)">
 <!ENTITY Ctr_bmbutpanelm	"Tłocašk menija cytańskich znamjenjow: naglěd menijowego wuskokujucego wokna">
@@ -253,9 +253,9 @@
 <!ENTITY Ctr_transpttbw10	"Titelowa/menijowa/rejtarkowa rědka: Slězynowu barwu wótpóraś">
 <!ENTITY Ctr_transptcw10	"Standardne tłocaški Miniměrowaś/Maksiměrowaś/Zacyniś schowaś">
 <!ENTITY Ctr_hidenavbar		"Symbolowu rědku schowaś">
-<!ENTITY Ctr_navbarpad		"Additional left and right padding">
-<!ENTITY Ctr_navbarpad_l	"Left:">
-<!ENTITY Ctr_navbarpad_r	"Right:">
+<!ENTITY Ctr_navbarpad		"Pśidatny lěwa a pšawy nutśkowny wótstawk">
+<!ENTITY Ctr_navbarpad_l	"Nalěwo:">
+<!ENTITY Ctr_navbarpad_r	"Napšawo:">
 <!ENTITY Ctr_nobookbarbg	"Slězynowu barwu wótpóraś">
 <!ENTITY Ctr_bookbarfs		"W modusu połneje wobrazowki">
 <!ENTITY Ctr_nonavbarbg		"Slězynowu barwu wótpóraś">
